--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: "Jorge Fernández Tejedor - Científico de Datos"
-theme: jekyll-theme-cayman
+theme: jekyll-theme-midnight
 description: "Científico de Datos especializado en análisis estadístico y machine learning."
 baseurl: "" 
